# portfolio

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: index.js
client/src/components/: AutoplayCarousel.js  Chat.css  Chat.js  Glassy.css  Glassy.js  Menu.css  Menu.js  Port.css  Port.js  autoplaycarousel.css
client/src/containers/: App.css  App.js
server/: Cargo.toml
server/src/: main.rs
server/src/controllers/: service_controller.rs
