[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1" }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.11.6" }
hyper = { version = "1.5.2", features = ["full"] }
log = { version = "0.4.20" }
serde_json = { version = "1.0.95" }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
